# student_rating.github.io

./: .coverage  .gitignore  README.md  app.py  just_test_page.html  my_orm.py  my_tools.py  openapi.yaml  prepros.config  pyproject.toml  request_test.py  requirements.txt  student.py
alembic/: env.py
alembic/versions/: 3525bc5299a8_third.py  625975cf5384_admin_table.py  866c4bdbf8b8_second_commit.py  9f27ea533316_phone_changes.py  b23c53fbc31c_first_revision.py  b24df35b3674_my_first_revision.py  bc4153fd8046_first_revision.py  e21f2a7360bc_varchar_changes.py
static/css/: contact_page.css  edit_delete.css  listing_page.css  login_page.css  main_page.css  rating_table.css  student_create.css  user_info.css
static/scss/: contact_page.scss  create.css  create.scss  edit_delete.scss  listing_page.scss  login_page.scss  main_page.scss  rating_table.scss  student_create.scss  user_info.scss
static/scss/included/: footer_style.scss  header_style.scss
student_score/: package-lock.json  package.json
student_score/src/: App.js  App.test.js  CreateStudent.js  CreateStudent.test.js  EditPage.js  EditScores.js  EditScores.test.js  Header.js  Header.test.js  Login.js  Login.test.js  MainPage.js  MainPage.test.js  Profile.js  Profile.test.js  ScoresTable.js  ScoresTable.test.js  UserListing.js  UserListing.test.js  useToken.js
templates/: contact_page.html  detailed_progress.html  edit_delete_page.html  error_404.html  errors.html  listing_page.html  login_page.html  main_page.html  rating_table.html  student_create.html  user_info.html
(+9 files in other folders)
