[tool.poetry]
name = "lab-done"
version = "0.1.0"
description = ""
authors = ["batiamida <laxonbs@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_done"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
waitress = "^2.1.2"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.4"
alembic = "^1.8.1"
Flask-RESTful = "^0.3.9"
requests = "^2.28.1"
marshmallow = "^3.18.0"
Flask-Bcrypt = "^1.0.1"
Flask-HTTPAuth = "^4.7.0"
coverage = "^6.5.0"
Flask-Cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
